# data-terraform

./: Dockerfile  README.md  ingest.py  pyproject.toml  spells.json
iac/: user_data.sh
iac/terraform/: main.tf  plan  plano  provider.tf
